--- a/requirements.txt
+++ b/requirements.txt
@@ -20,4 +20,4 @@ uvicorn[standard]==0.34.0
 pillow==11.1.0
 
 # huggingface-hub is required by vLLM for downloading models from Hugging Face
-huggingface-hub==0.27.1
+huggingface-hub>=0.21.0
